Updated CSS styles to enhance layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 </head>
 <body>
     <header>
-        <h1>My Responsive Page</h1>
+        <h1>Responsive Layout</h1>
     </header>
-    <section class="section chicken">
-        <h2>Chicken</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </section>
-    <section class="section beef">
-        <h2>Beef</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </section>
-    <section class="section sushi">
-        <h2>Sushi</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </section>
+    <div class="container">
+        <section class="section section-1">
+            <div class="title">Chicken</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel ligula vel est tincidunt varius.</p>
+        </section>
+        <section class="section section-2">
+            <div class="title">Beef</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel ligula vel est tincidunt varius.</p>
+        </section>
+        <section class="section section-3">
+            <div class="title">Sushi</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel ligula vel est tincidunt varius.</p>
+        </section>
+    </div>
 </body>
 </html>
+
