Updated CSS for layout and fixed text overlapping issue

--- a/index.html
+++ b/index.html
@@ -7,23 +7,20 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Responsive Layout</h1>
-    </header>
     <div class="container">
-        <section class="section section-1">
+        <h1>Our Menu</h1>
+        <div class="section">
             <div class="title">Chicken</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel ligula vel est tincidunt varius.</p>
-        </section>
-        <section class="section section-2">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="section">
             <div class="title">Beef</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel ligula vel est tincidunt varius.</p>
-        </section>
-        <section class="section section-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="section">
             <div class="title">Sushi</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel ligula vel est tincidunt varius.</p>
-        </section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
     </div>
 </body>
 </html>
-
