Updated layout and CSS for menu

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1>Our Menu</h1> <!-- Heading outside the container -->
     <div class="container">
-        <h1>Our Menu</h1>
         <div class="section">
             <div class="title">Chicken</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatum deserunt aliquid quidem sed veritatis, nesciunt excepturi debitis. Provident dignissimos id perspiciatis cum voluptate eos rerum totam asperiores veritatis consequuntur, in incidunt molestias quod neque dolorem odio eaque saepe assumenda! Blanditiis nobis culpa sunt magnam porro, quod aliquam amet! Vero.</p>
         </div>
         <div class="section">
             <div class="title">Beef</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatum deserunt aliquid quidem sed veritatis, nesciunt excepturi debitis. Provident dignissimos id perspiciatis cum voluptate eos rerum totam asperiores veritatis consequuntur, in incidunt molestias quod neque dolorem odio eaque saepe assumenda! Blanditiis nobis culpa sunt magnam porro, quod aliquam amet! Vero.</p>
         </div>
         <div class="section">
             <div class="title">Sushi</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatum deserunt aliquid quidem sed veritatis, nesciunt excepturi debitis. Provident dignissimos id perspiciatis cum voluptate eos rerum totam asperiores veritatis consequuntur, in incidunt molestias quod neque dolorem odio eaque saepe assumenda! Blanditiis nobis culpa sunt magnam porro, quod aliquam amet! Vero.</p>
         </div>
     </div>
 </body>
